log
Thu 07 Sep 2023 07:18:10 PM UTC: 
 tests:  0|6
total_score: 0/70
d043dfe
Thu 07 Sep 2023 07:28:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:21: error: ‘HashMapMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                     ^~~~~~~~~~
      |                     HashMap
hashmap.c:56:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:32: error: expected expression before ‘)’ token
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |                                ^
hashmap.c:56:14: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |     HashMap* map = (HashMapMap*)malloc(sizeof(HashMap));
      |              ^~~
hashmap.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2c4934c
Thu 07 Sep 2023 07:30:34 PM UTC: 
 hashmap.c | 45 +++++++++++++++------------------------------
 1 file changed, 15 insertions(+), 30 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a6eabe
